# harmonyos-fast-kit-example

./: .gitignore  CONTRIBUTING.md  FAST_KIT_HARMONY_AGENT_PROMPT.md  README.md  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/types/libfastkit/: index.d.ts  oh-package.json5
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/native/: FastKitService.ets
entry/src/main/ets/pages/: AboutPage.ets  DspDemoPage.ets  Index.ets  RectanglePartitionPage.ets  SegmentTreePage.ets
entry/src/main/resources/base/element/: color.json  float.json  string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/dark/element/: color.json
